--- a/notebook/Collective Intelligence.ipynb
+++ b/notebook/Collective Intelligence.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "Collective Intelligence"
+  "name": "nb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -36,7 +36,19 @@
      "input": "import cPickle, bz2\n\nfrom collections import namedtuple, defaultdict\nfrom itertools import groupby\n\n\ndatasets_folder = 'datasets/'\n\nsummaries_file = datasets_folder + 'summaries.pkl.bz2'\nids_file = datasets_folder + 'ids.pkl.bz2'\ncitations_file = datasets_folder + 'citations.pkl.bz2'\n\nSummaries = cPickle.load( bz2.BZ2File( summaries_file, 'rb' ) )\n\npaper = namedtuple( 'paper', ['title', 'authors', 'year', 'doi'] )\n\nprint 'Loading data...\\n'\n\nfor (id, paper_info) in Summaries.iteritems():\n    Summaries[id] = paper( *paper_info )\n\nauthor_name = raw_input(\"Enter author: \")\n\nauthorScores = defaultdict(int)\n\nfor(item) in Summaries:\n    if author_name in Summaries[item].authors:\n        print Summaries[item]\n        print Summaries[item].authors.index(author_name)\n        print '\\n'\n        for author in Summaries[item].authors:\n            authorScores[author] += 1\nfor item in sorted(authorScores):\n    print item\n    print authorScores[item]",
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "ename": "IOError",
+       "evalue": "[Errno 2] No such file or directory: 'datasets/summaries.pkl.bz2'",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mIOError\u001b[0m                                   Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-1-8e24196e6138>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mcitations_file\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdatasets_folder\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'citations.pkl.bz2'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mSummaries\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcPickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mbz2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mBZ2File\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0msummaries_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rb'\u001b[0m \u001b[1;33m)\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[0mpaper\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnamedtuple\u001b[0m\u001b[1;33m(\u001b[0m \u001b[1;34m'paper'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'title'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'authors'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'year'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'doi'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mIOError\u001b[0m: [Errno 2] No such file or directory: 'datasets/summaries.pkl.bz2'"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "heading",
@@ -47,7 +59,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": "???",
+     "input": "jQuery20209501825489569455_1386608968613?",
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -120,6 +132,62 @@
      "cell_type": "raw",
      "metadata": {},
      "source": "It needs the clusterArray to know the elements of one cluster.\nThen the set and the distance function are here to help us in finding the next centroid for each cluster.\nThe number of cluster is here to make the algorithm more easy to implement, we could have used clusterArray to get back the number of cluster, but it is more readable like this."
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": "Third Assignment"
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": "TF IDF"
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": "In this part, we'll see how we implement the Term Frequency - Inverse Document Frequency (TF-IDF)"
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": "The TF here function measures the frequency of words in documents relative to the most common term."
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "#adaptive TF = every word with its normalized value for max term, e.g. TFid = (fid / maxk fkd)\n#tfrequency of word i in document d is that divided by the frequency of word k where k is the most common term in d\ndef TF(wordlist):\n    #count all occurences of words and sort from most common to least, return list[(word,count),]\n    tfrequency = collections.Counter(wordlist).most_common()\n    #get the count of the most common term for this document, get first elements' count\n    tmax = tfrequency[0][1]\n    #return TF score per word based on the frequency of every word in tfrequency divided by tmax\n    return [(f[0], float(f[1])/tmax) for f in tfrequency]",
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": "The main TFIDF function here builds the dictionary of documents with their term frequency by calling the TF function."
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "def TFIDF(documents):\n    tfdict = {}    \n    dfdict = collections.defaultdict(int)\n    for pmid, document in documents.iteritems():\n        words = document.split()\n        #skip on lower than 5 words, no data is provided or it is useless as tf-idf material\n        if(len(words) < 5):\n            continue\n\n        tfdict[pmid] = TF(words)\n        #combining this loop for some df as well\n        for word in set(words):\n            dfdict[word] += 1\n\n    tfidfdict = {}\n    idfdict = idf(dfdict,len(documents))\n    for pmid, tf in tfdict.iteritems():\n        tfidfdict[pmid] = {term: (count * idfdict[term]) for term, count in tf}\n\n    return tfidfdict",
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": "The idf function inverts the term frequencies so that frequencies are scored by uniqueness."
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "def idf(dftermsdict, documentN):\n    idfdict = {}\n    for term, df in dftermsdict.iteritems():\n        idfdict[term] = math.log(documentN/df, 2)\n\n    return idfdict",
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
