--- a/ToDo.txt
+++ b/ToDo.txt
@@ -9,6 +9,8 @@ Must:
 Should:
 -Working and wired flask interface
 -Integrated features (one module's output feeds the other module's input for refinement of results)
+-Docstrings and comments for every function
+
 
 Could:
 -Sphinx restructured text docstrings for autodoc
