--- a/notebook/Collective Intelligence.ipynb
+++ b/notebook/Collective Intelligence.ipynb
@@ -31,6 +31,26 @@
      "source": "In this part, we'll see how have we build the recommender."
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "import cPickle, bz2\n\nfrom collections import namedtuple, defaultdict\nfrom itertools import groupby\n\n\ndatasets_folder = 'datasets/'\n\nsummaries_file = datasets_folder + 'summaries.pkl.bz2'\nids_file = datasets_folder + 'ids.pkl.bz2'\ncitations_file = datasets_folder + 'citations.pkl.bz2'\n\nSummaries = cPickle.load( bz2.BZ2File( summaries_file, 'rb' ) )\n\npaper = namedtuple( 'paper', ['title', 'authors', 'year', 'doi'] )\n\nprint 'Loading data...\\n'\n\nfor (id, paper_info) in Summaries.iteritems():\n    Summaries[id] = paper( *paper_info )\n\nauthor_name = raw_input(\"Enter author: \")\n\nauthorScores = defaultdict(int)\n\nfor(item) in Summaries:\n    if author_name in Summaries[item].authors:\n        print Summaries[item]\n        print Summaries[item].authors.index(author_name)\n        print '\\n'\n        for author in Summaries[item].authors:\n            authorScores[author] += 1\nfor item in sorted(authorScores):\n    print item\n    print authorScores[item]",
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "IOError",
+       "evalue": "[Errno 2] No such file or directory: 'datasets/summaries.pkl.bz2'",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mIOError\u001b[0m                                   Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-1-8e24196e6138>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mcitations_file\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdatasets_folder\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'citations.pkl.bz2'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mSummaries\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcPickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mbz2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mBZ2File\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0msummaries_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rb'\u001b[0m \u001b[1;33m)\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[0mpaper\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnamedtuple\u001b[0m\u001b[1;33m(\u001b[0m \u001b[1;34m'paper'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'title'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'authors'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'year'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'doi'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mIOError\u001b[0m: [Errno 2] No such file or directory: 'datasets/summaries.pkl.bz2'"
+       ]
+      }
+     ],
+     "prompt_number": 1
+    },
+    {
      "cell_type": "heading",
      "level": 3,
      "metadata": {},
@@ -168,6 +188,62 @@
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": "Fourth Assignment"
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": "Pagerank"
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": "Papers are ranked by importance based on their citations. The citedBy function is a helper function that inverts the citation dataset, \nreturning a dataset of papers and where they are cited."
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "def citedBy(paperCitations):\n    cited_by = collections.defaultdict(list)\n    for ref, papers_citing_ref in paperCitations.iteritems():\n        for pmid in papers_citing_ref:\n            cited_by[pmid].append(ref)\n    return cited_by",
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": "The pagerank algorithm itself. This calculates the pagerank for every citation of the papers we have data of. The algorithm works in rounds, where the ranks are updated based on the ranks of the related papers. \nThe first round start with all papers at an average rank."
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "def pagerank(paperCitations, paperCitedBy, minChanges=10, maxRounds=150):\n    ranks = {}  # Creating the answer array\n    changes = minChanges + 1  # Just to be  sure to enter the while once\n    rounds = 0\n    avgRank = 1.0\n    jumpProbability = 0.15",
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": "The loop continues untill the maximum rounds set is met, or an equillibrium is reached and there are no more significant changes. This is measured by the minChanges parameter."
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "    while (changes > minChanges and rounds < maxRounds):\n        changes = 0\n        for pmid, citations in paperCitations.iteritems():       # For each paper of the paperSet, we calculate a rank\n            if (len(citations) > 0):\n                oldRank = ranks.setdefault(pmid, avgRank)\n                rank = 0.0\n\n                for reference in paperCitedBy[pmid]:\n                    try:\n                        rank += (ranks[reference] / len(paperCitations[reference]))\n                    except KeyError:\n                        rank += avgRank / 3 # If this paper is outside the dataset use the avgRank divided by the supposed amount of cited papers.\n\n                ranks[pmid] = (1-jumpProbability) * rank + jumpProbability\n                if (oldRank - ranks[pmid]) > 0.01:            # To be adapted if it is too strong or too light\n                    changes += 1\n            else:\n                ranks[pmid] = avgRank\n        rounds += 1\n    return (rounds, ranks)",
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": "At the end of each iteration of a paper, the old and new rank are compared to determine whether a significant change (if (oldRank - ranks[pmid]) > 0.01) has occured.\nThe entire loop continues while changes keep occuring (and the max rounds has not been met). Then the paper ranks are returned"
     }
    ],
    "metadata": {}
