Add processed loading/saving to TFIDF, normalize now warms up (precaches) wordnet lemmatizer, add memoize decorator (keeps track of function calls and caches them if appropriate) add memoize to dataloader.load ^_^ every query is now ~ 0.2s after the first query (that takes ~1.5s) add query expansion to ToDo. Good night!

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -10,6 +10,7 @@ Should:
 -Working and wired flask interface
 -Integrated features (one module's output feeds the other module's input for refinement of results)
 -Docstrings and comments for every function
+-implement query expansion (adding synonyms to the query)
 
 
 Could:
