--- a/ToDo.txt
+++ b/ToDo.txt
@@ -3,18 +3,17 @@ For 13/12/2013
 MoSCoW based
 
 Must:
--Redo distance
--Create independent feature algorithm (Baudouin is gonna give a try)
+-Redo recommender
+-Fix clustering
+-Create independent feature algorithm
 
 Should:
--Working and wired flask interface
--Integrated features (one module's output feeds the other module's input for refinement of results)
 -Docstrings and comments for every function
 -implement query expansion (adding synonyms to the query)
 
 
 Could:
--Sphinx restructured text docstrings for autodoc
+-
 
 Won't:
 -
